centrados mal maquetados

--- a/www/index.html
+++ b/www/index.html
@@ -151,14 +151,16 @@
                     <img class="img-responsive " src="img/logo.png">
                  </div>
                  <ons-row >
-                     <ons-col onclick="fn.load('entziklopedia.html')"  align="center">
+                     <ons-col vertical-align onclick="fn.load('entziklopedia.html')"  align="center">
                          <img class="img-responsive img-circle" src="img/redondo.png">
                          <i class="fas fa-book-open"></i>
                          Entziklopedia
                      </ons-col>
-                     <ons-col align="center">
-                         <img class="img-responsive img-circle" src="img/redondo.png">
-                         <i class="far fa-comment-alt"></i>
+                     <ons-col vertical-align align="center">
+                         <div class="content-imagen">
+                             <img class="img-responsive img-circle" src="img/redondo.png">
+                             <i class="far fa-comment-alt"></i>
+                         </div>
                          Aholkuak
                      </ons-col>
                  </ons-row>
