mal colocada imagen en el centro

--- a/www/index.html
+++ b/www/index.html
@@ -152,12 +152,14 @@
                  </div>
                  <ons-row >
                      <ons-col vertical-align onclick="fn.load('entziklopedia.html')"  align="center">
-                         <img class="img-responsive img-circle" src="img/redondo.png">
-                         <i class="fas fa-book-open"></i>
+                         <div class="content-imagen">
+                             <img class="img-responsive img-circle" src="img/redondo.png">
+                             <i class="fas fa-book-open"></i>
+                         </div>
                          Entziklopedia
                      </ons-col>
                      <ons-col vertical-align align="center">
-                         <div class="content-imagen">   
+                         <div class="content-imagen">
                              <img class="img-responsive img-circle" src="img/redondo.png">
                              <i class="far fa-comment-alt"></i>
                          </div>
@@ -166,13 +168,17 @@
                  </ons-row>
                  <ons-row >
                      <ons-col  align="center">
-                         <img class="img-responsive img-circle" src="img/redondo.png">
-                         <i class="fas fa-trash-alt"></i>
+                         <div class="content-imagen">
+                             <img class="img-responsive img-circle" src="img/redondo.png">
+                             <i class="fas fa-trash-alt"></i>
+                         </div>
                          Hondakinak
                      </ons-col>
                      <ons-col align="center">
-                         <img class="img-responsive img-circle" src="img/redondo.png">
-                         <i class="fab fa-yelp"></i>
+                         <div class="content-imagen">
+                             <img class="img-responsive img-circle" src="img/redondo.png">
+                             <i class="fab fa-yelp"></i>
+                         </div>
                          KanTrivia
                      </ons-col>
                  </ons-row>
