css mal en androin 4.4

--- a/www/index.html
+++ b/www/index.html
@@ -151,14 +151,14 @@
                     <img class="img-responsive " src="img/logo.png">
                  </div>
                  <ons-row >
-                     <ons-col vertical-align onclick="fn.load('entziklopedia.html')"  align="center">
+                     <ons-col  onclick="fn.load('entziklopedia.html')"  align="center">
                          <div class="content-imagen">
                              <img class="img-responsive img-circle" src="img/redondo.png">
                              <i class="fas fa-book-open"></i>
                          </div>
                          Entziklopedia
                      </ons-col>
-                     <ons-col vertical-align align="center">
+                     <ons-col  align="center">
                          <div class="content-imagen">
                              <img class="img-responsive img-circle" src="img/redondo.png">
                              <i class="far fa-comment-alt"></i>
